// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList renders correctly 1`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly in column mode 1`] = `
<div class="vd-data-list" column="true">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly in flex mode 1`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column vd-flex">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with a title 1`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <h4 class="mb-3 headline">
        Informations
      </h4>
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with an empty list 1`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <!---->
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders loading state correctly 1`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <datalistloading-stub itemsnumber="2" heading="true" titleclass="mb-3 headline" width="200px"></datalistloading-stub>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders loading state correctly 2`] = `
<div class="vd-data-list">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;
